# docs/swagger.yaml
@@ -74,6 +74,17 @@ definitions:
       quantity:
         type: integer
     type: object
+  request.UpdateProductRequest:
+    properties:
+      description:
+        type: string
+      imgPath:
+        type: string
+      menu:
+        type: boolean
+      name:
+        type: string
+    type: object
   response.Customer:
     properties:
       document:
@@ -201,6 +212,27 @@ definitions:
       name:
         type: string
     type: object
+  response.ProductUpdatedResponse:
+    properties:
+      amount:
+        type: integer
+      category:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      img_path:
+        type: string
+      menu:
+        type: boolean
+      name:
+        type: string
+      number:
+        type: integer
+      updated_at:
+        type: string
+    type: object
   v1.ErrorResponse:
     properties:
       code:
@@ -225,7 +257,7 @@ paths:
         schema:
           $ref: '#/definitions/request.CreateCustomer'
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -256,7 +288,7 @@ paths:
         required: true
         type: string
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -283,7 +315,7 @@ paths:
     get:
       description: Get Ingredient types
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -317,7 +349,7 @@ paths:
         name: type
         type: string
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -352,7 +384,7 @@ paths:
         schema:
           $ref: '#/definitions/request.CreateIngredientRequest'
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -385,7 +417,7 @@ paths:
         required: true
         type: string
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -419,7 +451,7 @@ paths:
         schema:
           $ref: '#/definitions/request.CreateOrder'
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -451,7 +483,7 @@ paths:
         name: status
         type: string
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -480,7 +512,7 @@ paths:
     get:
       description: Get Product Categories
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -514,7 +546,7 @@ paths:
         name: category
         type: string
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -549,7 +581,7 @@ paths:
         schema:
           $ref: '#/definitions/request.CreateProductRequest'
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -582,7 +614,7 @@ paths:
         required: true
         type: string
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
@@ -603,6 +635,39 @@ paths:
           schema:
             $ref: '#/definitions/v1.ErrorResponse'
       summary: Delete Product by number
+    patch:
+      description: Update Product
+      parameters:
+      - description: Request Body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateProductRequest'
+      produces:
+      - server/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ProductUpdatedResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+      summary: Update Product
   /v1/products/{productID}:
     get:
       description: Get Product by id
@@ -613,7 +678,7 @@ paths:
         required: true
         type: string
       produces:
-      - application/json
+      - server/json
       responses:
         "200":
           description: OK
