# internal/server/api/rest/v1/product/request/update_product_request.go
@@ -1,0 +1,18 @@
+package request
+
+import (
+	"hamburgueria/internal/modules/product/usecase/command"
+)
+
+type UpdateProductRequest struct {
+	Name        *string `json:"name"`
+	Description *string `json:"description"`
+	Menu        *bool   `json:"menu"`
+	ImgPath     *string `json:"imgPath"`
+}
+
+func (cp UpdateProductRequest) ToCommandWithNumber(number int) command.UpdateProductCommand {
+	return command.NewUpdateProductCommand(
+		number, cp.Name, cp.Description, nil, cp.Menu, cp.ImgPath,
+	)
+}
